--- a/chatter/chat/templates/chat/room.html
+++ b/chatter/chat/templates/chat/room.html
@@ -1,33 +1,67 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8"/>
-    <title>Chat Room</title>
-</head>
-<body>
-    <textarea id="chat-log" cols="100" rows="20"></textarea><br>
-    <input id="chat-message-input" type="text" size="100"><br>
-    <input id="chat-message-submit" type="button" value="Send">
-    {{ room_name|json_script:"room-name" }}
-    <script>
-        const roomName = JSON.parse(document.getElementById('room-name').textContent);
+{% extends parent_template|default:'chat/chat_base.html' %}
+{% load static %}
 
-        const chatSocket = new WebSocket(
-            'ws://'
-            + window.location.host
-            + '/ws/chat/'
-            + roomName
-            + '/'
-        );
+{% block content %}
+<head>
+    <style>
+        #chatLog {
+            height: 300px;
+            background-color: #FFFFFF;
+            resize: none;
+        }
+
+        #onlineUsersSelector {
+            height: 300px;
+        }
+    </style>
+</head>
+
+<main>
+
+    <div class="container mt-3 p-5">
+        <h2>public-django-channels-chat</h2>
+        <div class="row">
+            <div class="col-12 col-md-8">
+                <div class="mb-2">
+
+                    <textarea class="form-control" id="chatLog" readonly></textarea>
+                </div>
+                <div class="input-group">
+                    <input type="text" class="form-control" id="chat-message-input" placeholder="Enter your chat message">
+                    <div class="input-group-append">
+                        <button class="btn btn-success" id="chat-message-submit" type="button">Send</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-4">
+                <label for="onlineUsers">Online users</label>
+                <select multiple class="form-control" id="onlineUsersSelector">
+                </select>
+            </div>
+        </div>
+        {{ room_name.name|json_script:"room-name" }}
+    </div>
+
+</main>
+
+<script>
+        const roomName = JSON.parse(document.getElementById('room-name').textContent);
+        ws_scheme = window.location.protocol == "https:" ? "wss" : "ws";
+        const chatSocket = new WebSocket(ws_scheme + "://" + window.location.host + "/ws/messenger/chat_room/" + roomName + "/");
 
         chatSocket.onmessage = function(e) {
             const data = JSON.parse(e.data);
-            document.querySelector('#chat-log').value += (data.message + '\n');
+            console.log(data)
+            chatLog.value += data.message + "\n"
         };
 
-        chatSocket.onclose = function(e) {
-            console.error('Chat socket closed unexpectedly');
-        };
+       chatSocket.onclose = function(e) {
+        console.log("WebSocket connection closed unexpectedly. Trying to reconnect in 2s...");
+        setTimeout(function() {
+            console.log("Reconnecting...");
+            connect();
+        }, 2000);
+    };
 
         document.querySelector('#chat-message-input').focus();
         document.querySelector('#chat-message-input').onkeyup = function(e) {
@@ -44,6 +78,6 @@
             }));
             messageInputDom.value = '';
         };
-    </script>
-</body>
-</html>
+</script>
+
+{% endblock content %}
