--- a/chatter/chat/templates/chat/room.html
+++ b/chatter/chat/templates/chat/room.html
@@ -34,12 +34,16 @@
                 </div>
             </div>
             <div class="col-12 col-md-4">
-                <label for="onlineUsers">Online users</label>
+                <label >Room Members</label>
                 <select multiple class="form-control" id="onlineUsersSelector">
+                    {% for user in users %}
+                        <option>{{user.username}}</option>
+                    {% endfor %}
                 </select>
             </div>
         </div>
         {{ room_name.name|json_script:"room-name" }}
+
 
     </div>
 
@@ -65,6 +69,7 @@
             const data = JSON.parse(e.data);
             console.log(data)
             chatLog.value += data.user + ': ' + data.message + "\n";
+
 
         };
 
