--- a/chatter/chat/templates/chat/userchat1.html
+++ b/chatter/chat/templates/chat/userchat1.html
@@ -53,13 +53,9 @@
 
 <script>
         console.log("Js check from privateroom.js");
-        const private_room_id = JSON.parse(document.getElementById('private_room_id').textContent);
+        const private_room_id = JSON.parse(document.getElementById(private_room_id').textContent);
         ws_scheme = window.location.protocol == "https:" ? "wss" : "ws";
         const chatSocket = new WebSocket(ws_scheme + "://" + window.location.host + "/ws/messenger/private_room/" + private_room_id + "/");
-        let onlineUsersSelector = document.querySelector("#onlineUsersSelector");
-        let chatLog = document.querySelector("#chatLog");
-        let chatMessageInput = document.querySelector("#chatMessageInput");
-        let chatMessageSend = document.querySelector("#chatMessageSend");
         let onlineUsersSelector = document.querySelector("#onlineUsersSelector");
 
         function onlineUsersSelectorAdd(value) {
@@ -70,19 +66,6 @@
             newOption.innerHTML = value;
             onlineUsersSelector.appendChild(newOption);
         }
-        function connect() {
-            chatSocket = new WebSocket(ws_scheme + "://" + window.location.host + "/ws/messenger/private_room/" + private_room_id + "/");
-
-            chatSocket.onopen = function(e) {
-                console.log("Successfully connected to the WebSocket.");
-        }
-        chatMessageSend.onclick = function() {
-            if (chatMessageInput.value.length === 0) return;
-                chatSocket.send(JSON.stringify({
-                    "message": chatMessageInput.value,
-        }));
-                chatMessageInput.value = "";
-        };
 
         chatSocket.onmessage = function(e) {
             const data = JSON.parse(e.data);
@@ -112,7 +95,7 @@
         document.querySelector('#chat-message-input').focus();
         document.querySelector('#chat-message-input').onkeyup = function(e) {
             if (e.keyCode === 13) {  // enter, return
-                chatMessageSend.click();
+                document.querySelector('#chat-message-submit').click();
             }
         };
 
