--- a/chatter/chat/templates/chat/privatechat.html
+++ b/chatter/chat/templates/chat/privatechat.html
@@ -52,10 +52,10 @@
 </main>
 
 <script>
-        console.log("Js check from privateroom.js");
-        const private_room_id = JSON.parse(document.getElementById(private_room_id').textContent);
+       console.log("Js check from directchat.js");
+        const room_id = JSON.parse(document.getElementById('private_room_id').textContent);
         ws_scheme = window.location.protocol == "https:" ? "wss" : "ws";
-        const chatSocket = new WebSocket(ws_scheme + "://" + window.location.host + "/ws/messenger/private_room/" + private_room_id + "/");
+        const chatSocket = new WebSocket(ws_scheme + "://" + window.location.host + "/ws/messenger/private_room/" + room_id + "/");
         let onlineUsersSelector = document.querySelector("#onlineUsersSelector");
 
         function onlineUsersSelectorAdd(value) {
