--- a/chatter/chat/templates/chat/privatechat.html
+++ b/chatter/chat/templates/chat/privatechat.html
@@ -80,8 +80,7 @@
                 }
                     break;
             }
-
-
+            chatLog.scrollTop = chatLog.scrollHeight;
         };
 
        chatSocket.onclose = function(e) {
