--- a/chatter/chat/templates/chat/index.html
+++ b/chatter/chat/templates/chat/index.html
@@ -34,7 +34,7 @@
                   {% for room in top_rooms %}
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                      <img src="{{room.room_image.url}}" alt="">
+                      <img src="{{room.room_image.url}}" height="175px" alt="">
                       <h4>{{room.name}}<br><span>Users:</span></h4>
                       <ul>
                         <li> <br></li>
@@ -67,7 +67,7 @@
               {% for room in recent_rooms  %}
               <div class="item">
                 <ul>
-                  <li><img src="{{room.room_image.url}}" alt="" class="templatemo-item"></li>
+                  <li><img src="{{room.room_image.url}}"  height="80px" alt="" class="templatemo-item"></li>
                   <li><h4>Room Name</h4><span>{{room.name}}</span></li>
                   <li><h4>Date Added</h4><span>{{room.date_created}}</span></li>
                   <li><h4>Category</h4><span>{{room.category.slug}}</span></li>
