Added the settings to display all emails on console

--- a/chatter/user/templates/user/password_reset_confirm.html
+++ b/chatter/user/templates/user/password_reset_confirm.html
@@ -5,7 +5,7 @@
 <br>
 <h3>Password Reset</h3>
 {% if validlink %}
-    <form method="post", action="{% url 'dj-auth:password_reset_confirm' %}">
+    <form method="post", action="{{request.path}}">
         {% csrf_token %}
         {{form.as_p}}
         <button type="submit">Reset Password</button>
