Created views,templates,urls patterns for videochat app

--- a/chatter/videochat/templates/videochat/privatevideo2.html
+++ b/chatter/videochat/templates/videochat/privatevideo2.html
@@ -30,4 +30,4 @@
 
 <script type="text/javascript" src="{% static 'assets/AgoraRTC_N-4.10.1.js' %}"></script>
 <script type="text/javascript" src="{% static 'js/privatevideo.js' %}"></script>
-{% endblock content %
+{% endblock content %}
