--- a/chatter/videochat/templates/videochat/videochatroom.html
+++ b/chatter/videochat/templates/videochat/videochatroom.html
@@ -2,8 +2,16 @@
 {% load static %}
 {% block content %}
 
+<main>
+    <section id="'room-name-wrapper">
+        <p>Room Name :<span id="room-name"></span> </p>
+    </section>
+    <section id="video-streams">
+
+    </section>
+</main>
 
 
 <script type="text/javascript" src="{% static 'assets/AgoraRTC_N-4.10.1.js' %}"></script>
-<script type="text/javascript" src="{% static 'js/stream.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/videochat/stream.js' %}"></script>
 {% endblock content %}
