--- a/chatter/videochat/templates/videochat/videochatlobby.html
+++ b/chatter/videochat/templates/videochat/videochatlobby.html
@@ -3,47 +3,41 @@
 {% load static %}
 
 {% block content %}
+<link rel='stylesheet' type='text/css' media='screen' href="{% static 'js/videochat/css/video_main.css' %}">
 <main>
-<div class="card text-center mx-auto mt-5" style="max-height: 200px; min-width: 400px; max-width: 500px">
-    <div class="card-header mb-4" >
-        Welcome to the video chat lobby!
-    </div>
-    <h5 class="card-title">Enter a room name. Characters Only!</h5>
-    <form id="form">
-        <div class="form-field mb-3">
-            <input onkeydown="return /[a-z]/i.test(event.key)" type="text" name="room" placeholder="Enter a room name." style="text-transfrom:uppercase;"/>
-        </div>
-        <div class="form-field">
-            <input type="submit" value="Join stream"/>
-        </div>
-    </form>
-</div>
+        <section id="form-container">
 
-</main>
+            <img id="logo" src="{% static 'images/chat-icon.png' %}"/>
 
-</main>
+            <div id="welcome-message">
+                <h1>Welcome to MyChat</h1>
+                <p>A group video calling platform made just for you!</p>
+            </div>
 
+            <form id="form">
+                <div class="form-field">
+                    <label>Room</label>
+                    <input type="text" name="room" placeholder="Enter room name..."/>
+                </div>
+
+                <div class="form-field">
+                    <label>Name</label>
+                    <input type="text" name="room" placeholder="Enter username..."/>
+                </div>
+
+                <div class="form-field">
+                    <input type="submit"  value="Join Room">
+                </div>
+            </form>
+        </section>
+    </main>
 <script type="text/javascript">
     let form = document.getElementById('form')
-
-    let handleSubmit = async (e) => {
+    let handleSubmit = async (e) =>{
         e.preventDefault()
-        let room = e.target.room.value.toUpperCase()
-
-        let response = await fetch(`/get_token/?channel=${room}`)
-        let data = await response.json()
-
-        let UID = data.uid
-        let token = data.token
-
-        sessionStorage.setItem('UID', UID)
-        sessionStorage.setItem('token', token)
-        sessionStorage.setItem('room', room)
-
-        window.open('/videochatroom/', '_self')
+        window.open('/videochat/room/','_self')
     }
-
-    form.addEventListener('submit', handleSubmit)
+    form.addEventListener('submit',handleSubmit)
 </script>
 
 {% endblock content %}
