--- a/chatter/videochat/templates/videochat/videochatroom.html
+++ b/chatter/videochat/templates/videochat/videochatroom.html
@@ -1,17 +1,28 @@
-{% extends parent_template|default:'videochat/video_base.html'%}
+
 {% load static %}
-{% block content %}
-
+<link rel='stylesheet' type='text/css' media='screen' href="{% static 'js/videochat/css/video_main.css' %}">
 <main>
-    <section id="'room-name-wrapper">
-        <p>Room Name :<span id="room-name"></span> </p>
+    <section id="room-name-wrapper">
+        <p>Room Name: <span id="room-name"></span></p>
     </section>
-    <section id="video-streams">
 
+    <section id="video-streams"></section>
+
+    <section id="controls-wrapper">
+        <div class="icon-wrapper">
+            <img class="control-icon" id="mic-btn" src="{% static 'images/microphone.svg' %}" />
+        </div>
+
+        <div class="icon-wrapper">
+            <img class="control-icon" id="camera-btn" src="{% static 'images/video.svg' %}" />
+        </div>
+
+        <div class="icon-wrapper">
+            <img class="control-icon" id="leave-btn" src="{% static 'images/leave.svg' %}" />
+        </div>
     </section>
 </main>
 
 
-<script type="text/javascript" src="{% static 'assets/AgoraRTC_N-4.10.1.js' %}"></script>
-<script type="text/javascript" src="{% static 'js/videochat/stream.js' %}"></script>
-{% endblock content %}
+<script type="text/javascript" src="{% static 'assets/AgoraRTC_N-4.15.1.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/videochat/streams.js' %}"></script>
