--- a/chatter/videochat/templates/videochat/videochatlobby.html
+++ b/chatter/videochat/templates/videochat/videochatlobby.html
@@ -35,6 +35,19 @@
     let form = document.getElementById('form')
     let handleSubmit = async (e) =>{
         e.preventDefault()
+
+        let room = e.target.room.value.toUpperCase()
+
+        let response = await fetch(`/videochat/get_token/?channel=${room}`)
+        let data = await response.json()
+        let UID = data.uid
+        let token = data.token
+
+        sessionStorage.setItem('UID',UID)
+        sessionStorage.setItem('token',token)
+        sessionStorage.setItem('room',room)
+
+
         window.open('/videochat/room/','_self')
     }
     form.addEventListener('submit',handleSubmit)
